# jggtrans

./: .cvsignore  .cvslog  .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  INSTALL.Pl  Makefile.am  NEWS  README  README.Pl  README.Repository_moved  TODO  acinclude.m4  autogen.sh  configure.ac  cosmetics.sh  cosmetics.vim  ggtrans.xml  ggtrans.xml.Pl  ggtrans.xml.pl  jggtrans.8  jggtrans.xml  jggtrans.xml.Pl
aux/: cosmetics.sh  users
libgadu/: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  make.inc.in
libgadu/docs/: protocol.html
libgadu/lib/: Makefile.am  Makefile.in  common.c  compat.h  dcc.c  events.c  http.c  libgadu-config.h.in  libgadu.c  libgadu.h  libgadu.pc.in  obsolete.c  pubdir.c  pubdir50.c
libgadu/m4/: Makefile  curses.m4  openssl.m4  python.m4  readline.m4  stdint.m4
libxode/: .cvsignore  .gitignore  Makefile.am  acconfig.h  autogen.sh  configure.ac  configure.in  libxode-config.in  solaris.autogen
libxode/include/: .cvsignore  Makefile.am  libxode.h
libxode/m4/: expat.m4
libxode/src/: .cvsignore  Makefile.am  pool.c  sha.c  str.c  xmlparse.c  xstream.c  xstream_test.c
po/: .cvsignore  .gitignore  LINGUAS  Makevars  POTFILES.in  nl.po  pl.po
src/: .cvsignore  .deps  .gitignore  Makefile  Makefile.am  acl.c  acl.h  browse.c  browse.h  conf.c  conf.h  debug.h  disco.c  disco.h  enc_test.out  enc_test.txt  enc_uni2win.h  enc_win2uni.h  encoding.c  encoding.h  fds.c  fds.h  forms.c  forms.h  gg_versions.c  gg_versions.h  ggtrans.h  iq.c  iq.h  jabber.c  jabber.h  jid.c  jid.h  main.c  message.c  message.h  presence.c  presence.h  register.c  register.h  (+14 more)
