AC_INIT()

AM_INIT_AUTOMAKE(libxode,1.2)
AM_CONFIG_HEADER(include/config.h)

AC_DISABLE_SHARED
AC_ENABLE_STATIC

AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_STDC_HEADERS
AC_C_BIGENDIAN

AC_CHECK_FUNC(snprintf,AC_DEFINE(HAVE_SNPRINTF))

AC_CHECK_LIB(nsl, gethostent)
AC_CHECK_FUNC(connect,AC_DEFINE(HAVE_LIBSOCKET),[
	  AC_CHECK_LIB(socket,connect,use_lib_socket=yes,AC_MSG_ERROR([
*************************************************************
*  You do not seem to have the socket call available as a   *
*  function or in the socket library.  This problem must be *
*  fixed before you can continue.                           *
*************************************************************]))])

AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(short)

AC_OUTPUT(Makefile \
    libxode-config \
	src/Makefile \
	include/Makefile)
